--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,11 @@ nav ul {
     width: 100%;
 }
 
+svg {
+    fill: #fff;
+    cursor: pointer;
+}
+
 .nav__inner {
     width: min(100%, 1000px);
     display: flex;
@@ -41,17 +46,51 @@ nav ul {
     color: #fff;
 }
 
-svg {
-    fill: #fff;
-    cursor: pointer;
+/* SVG animation : from https://nucleoapp.com/tool/icon-transition */
+.nc-int-icon-rotate {
+    --animation-duration: 0.4s;
+}
+
+.nc-int-icon {
+    position: relative;
+}
+
+.nc-int-icon-b {
+    position: absolute;
+    top: calc(50% - 0.5em);
+    left: calc(50% - 0.5em);
+    opacity: 0;
+}
+
+.nc-int-icon-rotate .nc-int-icon-a,
+.nc-int-icon-rotate .nc-int-icon-b {
+    transition: opacity 0s calc(var(--animation-duration)/2), transform var(--animation-duration);
+    transform-origin: center center;
+}
+
+.nc-int-icon-rotate .nc-int-icon-b {
+    transform: rotate(90deg) scale(0.6);
+}
+
+.nc-int-icon-state-b .nc-int-icon-a {
+    opacity: 0;
+}
+
+.nc-int-icon-state-b .nc-int-icon-b {
+    opacity: 1;
+}
+
+.nc-int-icon-rotate.nc-int-icon-state-b .nc-int-icon-a {
+    transform: rotate(-90deg) scale(0.6);
+}
+
+.nc-int-icon-rotate.nc-int-icon-state-b .nc-int-icon-b {
+    transform: rotate(0);
 }
 
 
 /* ---------- RESPONSIVE ---------- */
 @media only screen and (min-width : 1200px) {
-    svg {
-        display: none;
-    }
 
     nav ul {
         display: flex;
@@ -59,4 +98,9 @@ svg {
         justify-content: flex-end;
         width: auto;
     }
+
+    svg {
+        display: none;
+    }
+
 }
